--- a/documentation/api/api.yaml
+++ b/documentation/api/api.yaml
@@ -295,7 +295,7 @@ paths:
               schema:
                 type: string
                 example: "Bearer eyJhb...u9XCA"
-  /prod/api/data:
+  /prod/package/{filename}:
     get:
       summary: Download the latest authorization package individual file
       tags: 
@@ -304,18 +304,19 @@ paths:
         '200':
           description: "Success. The authorization package file is returned."
           headers:
-            Content-Disposition:
-              description: "Indicates the file should be downloaded as an attachment."
+            Content-Type:
               schema:
                 type: string
-                example: "attachment;"
+                example: "application/json"
           content:
             application/json:
               schema:
                 type: string
-                format: binary # Indicates the response is a file
+                format: string 
         '401':
           description: "Unauthorized. The provided authentication token is missing, invalid, or expired."
+        '404':
+          description: "Authorization package not yet available"
         '502':
           description: "Bad Gateway."
         '500':
@@ -323,9 +324,20 @@ paths:
       description: >-
         Registered Fedramp Agencies Only
 
-
         Provides the ability to return each of the individual files created in
-        the Meridian Fedramp Authorization Package.
+        the Meridian Fedramp Authorization Package per FRR-ADS-TC-03
+
+        Available Filenames
+         - 3pao_audit_report.json
+         - assessed_vulnerabilities_integrated.json
+         - assessed_vulnerabilities.json
+         - fingerprint_cache.json
+         - ksi_vulnerability_bridge_log.json
+         - parsed_vulnerabilities.json
+         - technical_validation_log.json
+         - unified_ksi_validations.json
+         - validation_consistency_log.json
+         - vdr_vulnerability_status.json
       requestBody:
         headers:
             Authorization:
